--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-trait = "0.1.68"
 chrono = "0.4.24"
 num_enum = "0.6.0"
 reqwest = { version = "0.11.16", features = ["blocking"] }
