--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,6 @@ async-trait = "0.1.68"
 chrono = "0.4.24"
 num_enum = "0.6.0"
 reqwest = { version = "0.11.16", features = ["blocking"] }
-rustgie = { git = "https://github.com/BarmonHammer/rustgie.git", rev = "6b8c748" }
+rustgie = { git = "https://github.com/BarmonHammer/rustgie.git"}
 serde = { version = "1.0.160", features = ["derive"] }
 tokio = { version = "1.27.0", features = ["full"] }
