--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-trait = "0.1.68"
-chrono = "0.4.24"
 num_enum = "0.6.0"
-reqwest = { version = "0.11.16", features = ["blocking"] }
-rustgie = { git = "https://github.com/BarmonHammer/rustgie.git"}
-serde = { version = "1.0.160", features = ["derive"] }
-tokio = { version = "1.27.0", features = ["full"] }
+reqwest = { version = "0.11.16", features = ["blocking", "json", "rustls", "rustls-tls", "gzip", "brotli", "deflate"], default-features = false }
+rustgie_types = { git = "https://github.com/BarmonHammer/rustgie.git", default-features = false }
+
+[dev-dependencies]
+chrono = "0.4.24"
+
+[profile.release]
+strip = "symbols"
+lto = true
