--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,16 @@ edition = "2021"
 
 [dependencies]
 num_enum = "0.6.0"
-reqwest = { version = "0.11.16", features = ["blocking", "json", "rustls", "rustls-tls", "gzip", "brotli", "deflate"], default-features = false }
+serde = { version = "1.0.160", features = ["derive"], default-features = false }
+serde_cbor = "0.11.2"
 rustgie_types = { git = "https://github.com/BarmonHammer/rustgie.git", default-features = false }
+serde_repr = "0.1.12"
 
 [dev-dependencies]
 chrono = "0.4.24"
 
 [profile.release]
+opt-level="z"
 strip = "symbols"
 lto = true
+panic = "abort"
