add MiniIcon, so cool

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ serde = { version = "1.0.160", features = ["derive"], default-features = false }
 serde_cbor = "0.11.2"
 rustgie_types = { git = "https://github.com/ashakoor/rustgie.git", default-features = false }
 serde_repr = "0.1.12"
+wasm-bindgen = { version = "0.2.84", features = ["serde_json", "serde", "serde-serialize"] }
 
 [dev-dependencies]
 chrono = "0.4.24"
