--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "d2statfind"
+name = "d2_filter"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,8 +9,9 @@ edition = "2021"
 num_enum = "0.6.0"
 serde = { version = "1.0.160", features = ["derive"], default-features = false }
 serde_cbor = "0.11.2"
-rustgie_types = { git = "https://github.com/ashakoor/rustgie.git", default-features = false }
 serde_repr = "0.1.12"
+wasm-bindgen = { version = "0.2.84", features = ["serde_json", "serde", "serde-serialize"] }
+d2_minify = {git = "https://github.com/D2-Insight/d2_minify.git"}
 
 [dev-dependencies]
 chrono = "0.4.24"
