chore: update data to current

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ serde = { version = "1.0.160", features = ["derive"], default-features = false }
 serde_cbor = "0.11.2"
 serde_repr = "0.1.12"
 wasm-bindgen = { version = "0.2.84", features = ["serde_json", "serde", "serde-serialize"] }
-d2_minify = {git = "https://github.com/D2-Insight/d2_minify.git"}
+d2_minify = {git = "https://github.com/D2-Insight/d2_minify.git", features = ["serde"]}
+lol_alloc = "0.4.0"
+web-sys = { version = "0.3.61", features = ["Storage", "Window"] }
 
 [dev-dependencies]
 chrono = "0.4.24"
@@ -21,3 +23,7 @@ opt-level="z"
 strip = "symbols"
 lto = true
 panic = "abort"
+
+
+[features]
+wasm = []
